--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="main">
         <div class="display">
-            <h1>Tic Tac Toe yo</h1>
+            <a>Tic Tac Toe Yo</a>
             <div class="result"></div>
             <div class="turn"></div>
         </div>
