style adjustments - form (popup)

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
         <div id="initial-popup">
             <form id="start-form">
                 <div class="user-choice">
-                    <legend>Select an option:</legend>
+                    <div>
+                        <legend>Select an option:</legend>
+                    </div>
                     <div>
                         <input type="radio" id="X" name="p1Choice" value="X" checked>
                         <label for="X">X</label>
